After an evaluation, GNOME has moved from Bugzilla to GitLab. Learn more about GitLab.
No new issues can be reported in GNOME Bugzilla anymore.
To report an issue in a GNOME project, go to GNOME GitLab.
Do not go to GNOME Gitlab for: Bluefish, Doxygen, GnuCash, GStreamer, java-gnome, LDTP, NetworkManager, Tomboy.
Bug 691013 - Crash on missing ~/.config/dconf and clear pointer
Crash on missing ~/.config/dconf and clear pointer
Status: RESOLVED FIXED
Product: dconf
Classification: Core
Component: writer
git master
Other Linux
: Normal normal
: ---
Assigned To: dconf-maint
dconf-maint
Depends on:
Blocks:
 
 
Reported: 2013-01-02 14:09 UTC by Philippe "RzR" Coval
Modified: 2013-01-02 19:24 UTC
See Also:
GNOME target: ---
GNOME version: ---


Attachments
mkdir and clear pointer ... (1.11 KB, patch)
2013-01-02 14:09 UTC, Philippe "RzR" Coval
none Details | Review
service/: don't call g_hash_table_unref on changeset (1.04 KB, patch)
2013-01-02 19:22 UTC, Allison Karlitskaya (desrt)
committed Details | Review

Description Philippe "RzR" Coval 2013-01-02 14:09:54 UTC
Created attachment 232525 [details] [review]
mkdir and clear pointer ...

As reported previously by email this patch fix 
some crashes since latest release (0.15.2+9+g40c3756)
Comment 1 Allison Karlitskaya (desrt) 2013-01-02 19:22:22 UTC
Created attachment 232559 [details] [review]
service/: don't call g_hash_table_unref on changeset

4fce559d81bdd3841cfe16fd3a3e6b8e6e9e60f2 changed from using GHashTable
to database-mode changesets for caching the state of the database in the
service but we missed a case of g_hash_table_unref being called.

Fix that now.

Problem reported and fix suggested by Philippe Coval.
Comment 2 Allison Karlitskaya (desrt) 2013-01-02 19:22:55 UTC
The mkdir thing is bug 689136.
Comment 3 Allison Karlitskaya (desrt) 2013-01-02 19:23:23 UTC
Attachment 232559 [details] pushed as d5e6b6d - service/: don't call g_hash_table_unref on changeset
Comment 4 Allison Karlitskaya (desrt) 2013-01-02 19:24:05 UTC
Thanks very much for reporting both issues.  Everything should be fixed on master now -- testing is highly appreciated!