service/: don't call g_hash_table_unref on changeset

4fce559d81bdd3841cfe16fd3a3e6b8e6e9e60f2 changed from using GHashTable
to database-mode changesets for caching the state of the database in the
service but we missed a case of g_hash_table_unref being called.

Fix that now.

Problem reported and fix suggested by Philippe Coval.

https://bugzilla.gnome.org/show_bug.cgi?id=691013